// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Coupon /> works as expected: coupon set 1`] = `
<body>
  <div>
    <dt
      class="descriptionTitle"
    >
      <button
        class="actionButton"
        id="coupon-button"
      >
        Add coupon code
      </button>
    </dt>
    <dd
      class="descriptionExtraInfo"
    >
      SOME_CODE
    </dd>
    <dd
      class="descriptionValue"
    >
      <span>
        €5.55
      </span>
    </dd>
  </div>
  <div
    id="floating-ui-root"
  />
</body>
`;

exports[`<Coupon /> works as expected: initial 1`] = `
<body>
  <div>
    <dt
      class="descriptionTitle"
    >
      <button
        class="actionButton"
        id="coupon-button"
      >
        Add coupon code
      </button>
    </dt>
    <div />
    <dd
      class="descriptionValue descriptionValueZero"
    >
      <span>
        €0.00
      </span>
    </dd>
  </div>
  <div
    id="floating-ui-root"
  />
</body>
`;
